2008-06-20 Added set/get_closed method to Polygon; fixes error
           in hist - MM

2008-06-19 Use relative font sizes (e.g. 'medium' and 'large') in
           rcsetup.py and matplotlibrc.template so that text will
           be scaled by default when changing rcParams['font.size'] -
           EF

2008-06-17 Add a generic PatchCollection class that can contain any
           kind of patch. - MGD

2008-06-13 Change pie chart label alignment to avoid having labels
           overwrite the pie - MGD

2008-06-12 Added some helper functions to the mathtext parser to
           return bitmap arrays or write pngs to make it easier to use
           mathtext outside the context of an mpl figure.  modified
           the mathpng sphinxext to use the mathtext png save
           functionality - see examples/api/mathtext_asarray.py - JDH

2008-06-11 Use matplotlib.mathtext to render math expressions in
           online docs - MGD

2008-06-11 Move PNG loading/saving to its own extension module, and
           remove duplicate code in _backend_agg.cpp and _image.cpp
           that does the same thing - MGD

2008-06-11 Numerous mathtext bugfixes, primarily related to
           dpi-independence - MGD

2008-06-10 Bar now applies the label only to the first patch only, and
           sets '_nolegend_' for the other patch labels.  This lets
           autolegend work as expected for hist and bar - see
           https://sourceforge.net/tracker/index.php?func=detail&aid=1986597&group_id=80706&atid=560720
           JDH

2008-06-10 Fix text baseline alignment bug.  [ 1985420 ] Repair of
           baseline alignment in Text._get_layout.  Thanks Stan West -
           MGD

2008-06-09 Committed Gregor's image resample patch to downsampling
           images with new rcparam image.resample - JDH

2008-06-09 Don't install Enthought.Traits along with matplotlib. For
           matplotlib developers convenience, it can still be